<resources>
    <string name="app_name">Anagrams</string>
    <string name="action_settings">Settings</string>
    <string name="title_bar_left">|</string>
    <string name="title_anagram"> ANAGRAMS </string>
    <string name="title_bar_right">|</string>
    <string name="title_credits"> CREDITS </string>
    <string name="title_activity_settings">Settings</string>
    <string name="programmer">Programming</string>
    <string name="programmer_name">Nicholas Finch</string>
    <string name="designer">Designer</string>
    <string name="designer_name">Zach Patten</string>
    <string name="game_over">GAME OVER</string>
    <string name="score">Player Score:</string>
    <string name="score_total">00</string>
    <string name="high_score">High Score: </string>
    <string name="high_score_total">00</string>
    <string name="maximum_number_of_blocks">Maximum Number of tiles:</string>
    <string name="minimum_number_of_blocks">Minimum Number of tiles:</string>
    <string name="title_pause">GAME PAUSED</string>
    <string name="game_play">GAME PLAY</string>
    <string name="title_settings">SETTINGS</string>


</resources>
