<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_over_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.tisaconundrum.anagramgame.Settings">

    <TextView
        android:id="@+id/title_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/anagram_left"
        android:layout_alignBottom="@id/anagram_left"
        android:layout_centerHorizontal="true"
        android:text="@string/game_over"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/anagram_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_game_over"
        android:layout_alignBottom="@id/title_game_over"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/title_game_over"
        android:text="@string/title_bar_right"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/anagram_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="72dp"
        android:layout_toLeftOf="@id/title_game_over"
        android:text="@string/title_bar_left"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_game_over"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/score"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/score_total"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/high_score"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/total_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/high_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/high_score_total"
        android:textSize="20dp" />

</RelativeLayout>