<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credits_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.tisaconundrum.anagramgame.Credits">

    <TextView
        android:id="@+id/title_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/anagram_left"
        android:layout_alignBottom="@id/anagram_left"
        android:layout_centerHorizontal="true"
        android:text="@string/title_credits"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/anagram_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_credits"
        android:layout_alignBottom="@id/title_credits"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/title_credits"
        android:text="@string/title_bar_right"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/anagram_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="72dp"
        android:layout_toLeftOf="@id/title_credits"
        android:text="@string/title_bar_left"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/Programming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_credits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/programmer"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/programmer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Programming"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/programmer_name"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/Designer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/programmer_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/designer"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/designer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Designer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/designer_name"
        android:textSize="20dp" />

</RelativeLayout>