<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credits_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.tisaconundrum.anagramgame.Settings">

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:maxWidth="60dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/play_button" />

    <TextView
        android:id="@+id/title_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title_bar_left"
        android:layout_alignBottom="@id/title_bar_left"
        android:layout_centerHorizontal="true"
        android:text="@string/title_pause"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/title_bar_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_pause"
        android:layout_alignBottom="@id/title_pause"
        android:layout_marginLeft="18sp"
        android:layout_toRightOf="@id/title_pause"
        android:text="@string/title_bar_right"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/title_bar_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14sp"
        android:layout_marginTop="72sp"
        android:layout_toLeftOf="@id/title_pause"
        android:text="@string/title_bar_left"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_pause"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/score"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/score_total"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/high_score"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/total_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/high_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/high_score_total"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/music_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_high_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:maxHeight="44sp"
        android:scaleType="fitCenter"
        android:src="@mipmap/sound_option" />

    <ImageView
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="60dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/home_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>