<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.tisaconundrum.anagramgame.Settings">

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/anagram_left"
        android:layout_alignBottom="@id/anagram_left"
        android:layout_centerHorizontal="true"
        android:text="@string/title_settings"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/anagram_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_settings"
        android:layout_alignBottom="@id/title_settings"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/title_settings"
        android:text="@string/title_bar_right"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/anagram_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="72dp"
        android:layout_toLeftOf="@id/title_settings"
        android:text="@string/title_bar_left"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/min_num_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/minimum_number_of_blocks"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/programmer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/min_num_tile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/Designer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/programmer_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/maximum_number_of_blocks"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/max_num_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Designer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/max_num_tile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Music On/Off"
        android:textSize="20dp" />

</RelativeLayout>