<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anagram_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <TextView
        android:id="@+id/title_anagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title_bar_left"
        android:layout_alignBottom="@id/title_bar_left"
        android:layout_centerHorizontal="true"
        android:text="@string/title_anagram"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/title_bar_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_anagram"
        android:layout_alignBottom="@id/title_anagram"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/title_anagram"
        android:text="@string/title_bar_right"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/title_bar_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="72dp"
        android:layout_toLeftOf="@id/title_anagram"
        android:text="@string/title_bar_left"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/splash_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_anagram"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@mipmap/splash" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:maxWidth="40dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/setting" />

    <TextView
        android:id="@+id/credits_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Credits"
        android:textSize="25dp" />

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_screen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:maxWidth="130dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/play_logo" />


</RelativeLayout>